--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="index.css">
 	<title>Famba-SPA 2.0</title>
 </head>
 <body>
